--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "python_problems"
 version = "0.1.0"
-description = ""
+description = "Exercise problems"
 authors = ["Michael Duncan <msduncan82@gmail.com>"]
 
 [tool.poetry.dependencies]
