--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,14 @@ name = "python_problems"
 version = "0.1.0"
 description = "Exercise problems"
 authors = ["Michael Duncan <msduncan82@gmail.com>"]
+packages =  [ { include = "python_problems" } ]
 
 [tool.poetry.dependencies]
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
+black = "^22.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
