--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.9"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
 black = "^22.1.0"
+ipython = "^8.1.1"
+ipykernel = "^6.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
